--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:watch": "mocha --colors -w ./test/**/*.spec.js",
     "build:prod": "webpack --config=webpack.config.js --progress --colors --env=prod",
     "build:dev": "webpack --config=webpack.config.js --progress --colors --watch --env=dev",
+    "doc": "./node_modules/.bin/jsdoc -c jsdoc.json -t ./node_modules/docdash --debug",
     "lint": "eslint src/** --fix"
   },
   "devDependencies": {
@@ -20,8 +21,10 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
+    "docdash": "^0.4.0",
     "eslint-loader": "^1.7.1",
     "help": "^3.0.2",
+    "jsdoc": "^3.4.3",
     "mocha": "^3.2.0",
     "webpack": "^2.4.1",
     "yargs": "^7.1.0"
