--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "help": "^3.0.2",
     "jsdoc": "^3.4.3",
     "mocha": "^3.2.0",
+    "synaptic": "^1.0.10",
     "webpack": "^2.4.1",
     "yargs": "^7.1.0"
   },
